--- a/share/man/man4/man4.arm32/rd.4
+++ b/share/man/man4/man4.arm32/rd.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: rd.4,v 1.2 1999/07/02 20:11:50 aaron Exp $
+.\"	$OpenBSD: rd.4,v 1.3 2001/06/23 08:02:00 pjanzen Exp $
 .\"
 .\" Copyright (c) 1995 Mark Brinicombe
 .\" All rights reserved.
@@ -33,11 +33,11 @@
 .Os
 .Sh NAME
 .Nm rd
-.Nd Ramdisc device interface
+.Nd Ramdisk device interface
 .Sh SYNOPSIS
 .Cd "rd0 at mainbus?"
 .Sh DESCRIPTION
 The
 .Nm
-interface provides access to the ramdisc device interface.
+interface provides access to the ramdisk device interface.
 .Sh SEE ALSO
