more .%A handling; bk@rt.fm

--- a/sbin/mount_lfs/mount_lfs.8
+++ b/sbin/mount_lfs/mount_lfs.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: mount_lfs.8,v 1.10 1999/07/21 01:07:55 deraadt Exp $
+.\"	$OpenBSD: mount_lfs.8,v 1.11 2001/06/23 14:42:14 deraadt Exp $
 .\"	$NetBSD: mount_lfs.8,v 1.2 1995/03/18 14:57:30 cgd Exp $
 .\"
 .\" Copyright (c) 1993, 1994
@@ -91,7 +91,8 @@ to read data in small chunks when cleaning the file system.
 .Xr mount 8
 .Pp
 .Rs
-.%A Ousterhout and Douglis
+.%A John Ousterhout
+.%A Fred Douglis
 .%D 1989
 .%T "Beating the I/O Bottleneck: A Case for Log-structured File Systems"
 .%J "Operating Systems Review"
@@ -101,7 +102,8 @@ to read data in small chunks when cleaning the file system.
 .%O "also available as Technical Report UCB/CSD 88/467"
 .Re
 .Rs
-.%A Rosenblum and Ousterhout
+.%A Mendel Rosenblum
+.%A John Ousterhout
 .%D 1991
 .%T "The Design and Implementation of a Log-Structured File System"
 .%J "ACM SIGOPS Operating Systems Review"
@@ -116,7 +118,10 @@ to read data in small chunks when cleaning the file system.
 .%O "also available as Technical Report UCB/ERL M92"
 .Re
 .Rs
-.%A Seltzer, Bostic, McKusick and Staelin
+.%A Margo Seltzer
+.%A Keith Bostic
+.%A Marshall Kirk McKusick
+.%A Carl Staelin
 .%D 1993
 .%T "An Implementation of a Log-Structured File System for UNIX"
 .%J "Proc. of the Winter 1993 USENIX Conf."
