--- a/usr.sbin/arp/arp.4
+++ b/usr.sbin/arp/arp.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: arp.4,v 1.11 2001/06/23 02:33:06 deraadt Exp $
+.\"	$OpenBSD: arp.4,v 1.12 2001/06/23 14:42:12 deraadt Exp $
 .\"	$NetBSD: arp.4,v 1.2 1995/03/01 11:50:56 chopps Exp $
 .\"
 .\" Copyright (c) 1985, 1986, 1988, 1994
@@ -137,7 +137,8 @@ The routing information is not modified.
 .%T RFC826
 .Re
 .Rs
-.%A Karels, M.J. and Leffler, S.J .
+.%A Karels, M.J.
+.%A Leffler, S.J.
 .%B "Trailer Encapsulations
 .%T RFC893
 .Re
