--- a/usr.sbin/timed/timedc/timedc.8
+++ b/usr.sbin/timed/timedc/timedc.8
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: timedc.8,v 1.9 2001/06/23 02:33:01 deraadt Exp $
+.\"	$OpenBSD: timedc.8,v 1.10 2001/06/23 14:42:13 deraadt Exp $
 .\"
 .\" Copyright (c) 1980, 1991 Regents of the University of California.
 .\" All rights reserved.
@@ -128,8 +128,9 @@ log file for master timed
 .Xr icmp 4 ,
 .Xr timed 8
 .Rs
-.%A R. Gusella and S. Zatti
 .%T "TSP: The Time Synchronization Protocol for UNIX 4.3BSD"
+.%A R. Gusella
+.%A S. Zatti
 .Re
 .Sh DIAGNOSTICS
 .Bl -tag -width Ds -compact
