--- a/share/man/man4/pci.4
+++ b/share/man/man4/pci.4
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: pci.4,v 1.38 2001/06/23 14:33:27 matthieu Exp $
+.\"	$OpenBSD: pci.4,v 1.39 2001/06/23 15:37:40 matthieu Exp $
 .\"	$NetBSD: pci.4,v 1.29 2000/04/01 00:32:23 tsarna Exp $
 .\"
 .\" Copyright (c) 2000 Theo de Raadt.  All rights reserved.
@@ -362,6 +362,7 @@ driver.
 .Xr intro 4 ,
 .Xr isa 4 ,
 .Xr isapnp 4 ,
+.Xr options 4 ,
 .Xr pchb 4 ,
 .Xr pcmcia 4 ,
 .Xr usb 4
