--- a/share/man/man9/crypto.9
+++ b/share/man/man9/crypto.9
@@ -1,4 +1,4 @@
-.\"	$OpenBSD: crypto.9,v 1.8 2000/11/17 04:07:18 angelos Exp $
+.\"	$OpenBSD: crypto.9,v 1.9 2001/06/23 18:43:36 deraadt Exp $
 .\"
 .\" The author of this man page is Angelos D. Keromytis (angelos@cis.upenn.edu)
 .\"
@@ -22,7 +22,7 @@
 .Nm crypto
 .Nd API for cryptographic services in the kernel
 .Sh SYNOPSIS
-.Fd #include <crypto/crypto>
+.Fd #include <crypto/crypto.h>
 .Ft int32_t
 .Fn crypto_get_driverid "void"
 .Ft int
